--- a/darknet_files/yolov3tiny_predict.cfg
+++ b/darknet_files/yolov3tiny_predict.cfg
@@ -3,8 +3,8 @@
 batch=1
 subdivisions=1
 # Training
-#batch=64
-#subdivisions=32
+# batch=64
+# subdivisions=2
 width=416
 height=416
 channels=3
@@ -96,15 +96,11 @@ stride=1
 
 [convolutional]
 batch_normalize=1
-filters=512
+filters=1024
 size=3
 stride=1
 pad=1
 activation=leaky
-
-[shortcut]
-activation=leaky
-from=-3
 
 ###########
 
@@ -118,22 +114,18 @@ activation=leaky
 
 [convolutional]
 batch_normalize=1
-filters=256
+filters=512
 size=3
 stride=1
 pad=1
 activation=leaky
 
-[shortcut]
-activation=leaky
-from=-2
-
 [convolutional]
 size=1
 stride=1
 pad=1
-# filters = 3*(classes+5)
-filters=24
+# filters = 3*(classes + 5)
+filters=21
 activation=linear
 
 
@@ -141,7 +133,7 @@ activation=linear
 [yolo]
 mask = 3,4,5
 anchors = 10,14,  23,27,  37,58,  81,82,  135,169,  344,319
-classes=3
+classes=2
 num=6
 jitter=.3
 ignore_thresh = .7
@@ -162,38 +154,28 @@ activation=leaky
 [upsample]
 stride=2
 
-[shortcut]
-activation=leaky
-from=8
+[route]
+layers = -1, 8
 
 [convolutional]
 batch_normalize=1
-filters=128
+filters=256
 size=3
 stride=1
 pad=1
 activation=leaky
 
-[shortcut]
-activation=leaky
-from=-3
-
-[shortcut]
-activation=leaky
-from=8
-
 [convolutional]
 size=1
 stride=1
 pad=1
-# filters = 3*(classes+5)
-filters=24
+filters=21
 activation=linear
 
 [yolo]
-mask = 1,2,3
+mask = 0,1,2
 anchors = 10,14,  23,27,  37,58,  81,82,  135,169,  344,319
-classes=3
+classes=2
 num=6
 jitter=.3
 ignore_thresh = .7
