--- a/darknet_files/yolov3tiny_train.cfg
+++ b/darknet_files/yolov3tiny_train.cfg
@@ -1,10 +1,10 @@
 [net]
 # Testing
-#batch=1
-#subdivisions=1
+# batch=1
+# subdivisions=1
 # Training
 batch=64
-subdivisions=16
+subdivisions=2
 width=416
 height=416
 channels=3
@@ -17,9 +17,9 @@ hue=.1
 
 learning_rate=0.001
 burn_in=1000
-max_batches = 6000
+max_batches = 4000
 policy=steps
-steps=4800,5400
+steps=3200,3600
 scales=.1,.1
 
 [convolutional]
@@ -96,15 +96,11 @@ stride=1
 
 [convolutional]
 batch_normalize=1
-filters=512
+filters=1024
 size=3
 stride=1
 pad=1
 activation=leaky
-
-[shortcut]
-activation=leaky
-from=-3
 
 ###########
 
@@ -118,30 +114,26 @@ activation=leaky
 
 [convolutional]
 batch_normalize=1
-filters=256
+filters=512
 size=3
 stride=1
 pad=1
 activation=leaky
 
-[shortcut]
-activation=leaky
-from=-2
-
 [convolutional]
 size=1
 stride=1
 pad=1
-# filters = 3*(classes+5)
-filters=24
+# filters = 3*(classes + 5)
+filters=21
 activation=linear
 
 
 
 [yolo]
 mask = 3,4,5
-anchors = 10,14,  23,27,  37,58,  81,82,  135,169,  344,319
-classes=3
+anchors =  21, 30,  91,115
+classes=2
 num=6
 jitter=.3
 ignore_thresh = .7
@@ -162,38 +154,28 @@ activation=leaky
 [upsample]
 stride=2
 
-[shortcut]
-activation=leaky
-from=8
+[route]
+layers = -1, 8
 
 [convolutional]
 batch_normalize=1
-filters=128
+filters=256
 size=3
 stride=1
 pad=1
 activation=leaky
 
-[shortcut]
-activation=leaky
-from=-3
-
-[shortcut]
-activation=leaky
-from=8
-
 [convolutional]
 size=1
 stride=1
 pad=1
-# filters = 3*(classes+5)
-filters=24
+filters=21
 activation=linear
 
 [yolo]
-mask = 1,2,3
-anchors = 10,14,  23,27,  37,58,  81,82,  135,169,  344,319
-classes=3
+mask = 0,1,2
+anchors =  21, 30,  91,115
+classes=2
 num=6
 jitter=.3
 ignore_thresh = .7
